deployment/manifests/hummus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hummus
  namespace: hummus
  labels:
    app.kubernetes.io/name: hummus
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hummus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hummus
    spec:
      serviceAccountName: hummus
      containers:
        - name: hummus
          image: hummus:latest
          imagePullPolicy: Never # as long as im using local images...
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/ready
              port: 8080
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/ready
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 10
