deployment/manifests/hummus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hummus
  namespace: hummus
  labels:
    app.kubernetes.io/name: hummus
spec:
  selector:
    app.kubernetes.io/name: hummus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
