deployment/manifests/hummus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hummus
  namespace: hummus
spec:
  ingressClassName: nginx
  rules:
    - host: hummus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hummus
                port:
                  number: 8080
